crates/cockpitctl-ingest/tests/snapshots/snapshot_edge_cases__zero_findings_all_pass.snap
---
source: crates/cockpitctl-ingest/tests/snapshot_edge_cases.rs
assertion_line: 330
expression: result.report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "test",
    "version": "1.0.0"
  },
  "run": {
    "started_at": "2026-02-01T00:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "build",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/build/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    },
    {
      "id": "lint",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/lint/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    },
    {
      "id": "test",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/test/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    }
  ],
  "highlights": [],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Repo contract",
      "Dependencies",
      "Policy",
      "Tests",
      "Diagnostics",
      "Performance",
      "Environment",
      "Other"
    ],
    "sensors": [
      {
        "id": "build",
        "blocking": true,
        "missing": "fail"
      },
      {
        "id": "lint",
        "blocking": true,
        "missing": "fail"
      },
      {
        "id": "test",
        "blocking": true,
        "missing": "fail"
      }
    ]
  }
}
